<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_email">enter email</string>
    <string name="enter_password">enter password</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="welcome_to_shoestore_application">Welcome to ShoeStore Application</string>
    <string name="welcome">Welcome</string>
    <string name="next">Next</string>
    <string name="instruction">Instruction</string>
    <string name="lets_go_to_store">Lets Go To Store</string>
    <string name="addbutton">addButton</string>
    <string name="logout">Logout</string>
    <string name="enter_description">Enter Description</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="enter_shoe_name">Enter Shoe Name</string>
    <string name="company">Company</string>
    <string name="enter_company">Enter Company</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="enter_shoe_size">Enter Shoe Size</string>
    <string name="description">Description</string>
    <string name="cancel">cancel</string>
    <string name="save">save</string>
</resources>
